...
import 'package:untitled6/utils/dimensions.dart';
import 'package:untitled6/widgets/big_text.dart';
import '../../controllers/user_controller.dart';
import '../../widgets/small_text.dart';

class Login extends StatefulWidget {
  const Login({Key? key}) : super(key: key);
  static String phone_number = '';
  static String username = '';
  static String url = '';
  @override
  State<Login> createState() => _LoginState();
}
...
              child: TextField(
                keyboardType: TextInputType.phone,
                onChanged: (value){
                  phone = value;
                },
                decoration: InputDecoration(
                  hintText: 'Phone',
                  prefixIcon: Icon(Icons.phone_android,color: AppColors.yellowColor,),
                  focusedBorder: OutlineInputBorder(
                      borderRadius: BorderRadius.circular(Dimensions.radius30),
                      borderSide: const BorderSide(
                        width: 1.0,
                        color: Colors.white,
...
                  ]
              ),
              child: TextField(
                controller: password,
                obscureText: true,
                decoration: InputDecoration(
                  hintText: 'Password',
                  prefixIcon: Icon(Icons.lock_outline,color: AppColors.yellowColor,),
                  focusedBorder: OutlineInputBorder(
                      borderRadius: BorderRadius.circular(Dimensions.radius30),
                      borderSide: const BorderSide(
                        width: 1.0,
                        color: Colors.white,
...
                height: 45,
                child: ElevatedButton(
                  style: ElevatedButton.styleFrom(
                      primary: Colors.green.shade600,
                      shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(10))),
                  key: const Key("LoginButton"),
                  onPressed: isLoading ? null : () async {

                    var user       = users.snapshots();
                    var user_found = false;

                    var user_number = validation(phone,'g','h');
...
