...
              padding: EdgeInsets.only(left: Dimensions.width20,right: Dimensions.width20),
              child: Row(
                mainAxisAlignment: MainAxisAlignment.spaceBetween,
                children: [
                  Column(
                    children: [
                      BigText(text: 'Kasi Monate App',color: AppColors.mainColor),
                      Row(
                        children: [
                          SmallText(text: "Monate o teng...",color: Colors.black54),
                          Icon(Icons.arrow_drop_down_rounded,size: Dimensions.iconSize24,)
                        ],
                      )
...
