...
  State<IncomingOrders> createState() => _IncomingOrdersState();
}

class _IncomingOrdersState extends State<IncomingOrders> {
  List<ProductOrders> productOrders = [];

  late Stream<DatabaseEvent> stream = FirebaseDatabase.instance.ref("Branche 1").onValue;

  @override
  void initState() {
    // TODO: implement initState
    super.initState();
    stream.listen((event) {
...
